[gd_scene load_steps=4 format=3 uid="uid://7oojruqwy2bb"]

[ext_resource type="Script" uid="uid://c4w74opw656mi" path="res://scenes/menus_abilities/menu_abilities.gd" id="1_7rv6a"]
[ext_resource type="Shortcut" uid="uid://b58bt5v88tsls" path="res://scenes/components/shortcuts/shortcut_cancel.tres" id="2_alif5"]
[ext_resource type="PackedScene" uid="uid://dp6o6kfcungs3" path="res://scenes/components/stats_panel.tscn" id="6_kqshp"]

[node name="MenuAbilities" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7rv6a")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainerCharacters" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonClose" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
shortcut = ExtResource("2_alif5")
text = "Close"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="LabelCharacterName" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Alice"

[node name="VBoxContainerAbilities" type="VBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer3"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3/ScrollContainer"]
layout_mode = 2

[node name="VBoxContainerOptions" type="VBoxContainer" parent="MarginContainer3/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonRemove" type="Button" parent="MarginContainer3/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Remove"

[node name="ButtonCancel" type="Button" parent="MarginContainer3/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="MarginContainer4" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="StatsPanel" parent="MarginContainer4" instance=ExtResource("6_kqshp")]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonClose" to="." method="_on_button_close_pressed"]
[connection signal="pressed" from="MarginContainer3/ScrollContainer/VBoxContainer/ButtonRemove" to="." method="_on_button_remove_pressed"]
[connection signal="pressed" from="MarginContainer3/ScrollContainer/VBoxContainer/ButtonCancel" to="." method="_on_button_cancel_pressed"]
